# bastion

./: .bastion.yaml  .gitattributes  .gitignore  .nudge.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Justfile  NOTICE  README.md  SECURITY.md  build.rs
.agents/skills/: readme.md
.claude/: launch.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: bastion.yml  ci.yml  installers.yml  release.yml  security.yml  site.yml
LICENSES/: CC-BY-SA-4.0.txt
bastion/: reviewers.yaml
docs/: DESIGN.md  GITHUB.md  LOCAL.md
docs/developer-guide/: README.md  architecture.md  backends.md  containers.md  conventions.md  design.md  github-adapter.md  local-surface.md
docs/user-guide/: README.md  authoring-reviewers.md  concepts.md  continuous-integration.md  getting-started.md  governance.md  introduction.md  local-workflow.md
scripts/: install.ps1  install.sh  setup-claude-env.sh
site/: DESIGN.md  PRODUCT.md  README.md  astro.config.mjs  package-lock.json  package.json
site/public/: CNAME
site/scripts/: og-gen.mjs
site/src/: content.config.ts
skills/using-bastion/: SKILL.md
src/: cli.rs  commands.rs  config.rs  context.rs  event.rs  git.rs  lib.rs  main.rs  paths.rs  render.rs  reviewer.rs  routing.rs  runner.rs  skills.rs  store.rs  verdict.rs  version.rs
src/backend/: claude_code.rs  codex.rs  command.rs  mod.rs  pi.rs
src/github/: client.rs  codeowners.rs  context.rs  mod.rs  (+1 more)
tests/: integration.rs  script_safety.rs  skills_mirror.rs
(+69 files in other folders)
