[package]
name = "bastion"
version = "0.0.0"
edition = "2024"
description = "Agentic code review: single-concern reviewers as fitness functions, run locally and in CI."
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/jssblck/bastion"
keywords = ["code-review", "agents", "ci", "llm", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
color-eyre = "0.6.5"
directories = "6.0.0"
globset = "0.4.18"
humantime = "2.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10.0"
tokio = { version = "1.52.3", features = [
    "macros",
    "process",
    "rt",
    "time",
    "io-util",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.27.0"
# `start_paused` in `#[tokio::test]` (virtual time for the timeout tests) needs
# tokio's test-util feature, which is only required by the test build.
tokio = { version = "1.52.3", features = ["test-util"] }

[lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
inline_always = "deny"
unnecessary_wraps = "deny"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
